added loading screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,39 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="drawable_bg" >#7b393a3f</color>
+    <color name="white">#FFFFFF</color>
+    <color name="ivory">#FFFFF0</color>
+    <color name="snow">#FFFAFA</color>
+    <color name="floralwhite">#FFFAF0</color>
+    <color name="ghostwhite">#F8F8FF</color>
+    <color name="lightsteelblue">#B0C4DE</color>
+    <color name="lightblue">#ADD8E6</color>
+    <color name="lightskyblue">#87CEFA</color>
+    <color name="skyblue">#87CEEB</color>
+    <color name="lightslategray">#778899</color>
+    <color name="slategray">#708090</color>
+    <color name="mediumaquamarine">#66CDAA</color>
+    <color name="cornflowerblue">#6495ED</color>
+    <color name="cadetblue">#5F9EA0</color>
+    <color name="steelblue">#4682B4</color>
+    <color name="royalblue">#4169E1</color>
+    <color name="turquoise">#40E0D0</color>
+    <color name="mediumseagreen">#3CB371</color>
+    <color name="darkslategray">#2F4F4F</color>
+    <color name="seagreen">#2E8B57</color>
+    <color name="forestgreen">#228B22</color>
+    <color name="lightseagreen">#20B2AA</color>
+    <color name="dodgerblue">#1E90FF</color>
+    <color name="darkturquoise">#00CED1</color>
+    <color name="deepskyblue">#00BFFF</color>
+    <color name="darkcyan">#008B8B</color>
+    <color name="teal">#008080</color>
+    <color name="green">#008000</color>
+    <color name="darkgreen">#006400</color>
+    <color name="blue">#0000FF</color>
+    <color name="mediumblue">#0000CD</color>
+    <color name="darkblue">#00008B</color>
+    <color name="navy">#000080</color>
+    <color name="black">#000000</color>
 </resources>
